[metadata]
name = perlin-noise-wgw101
version = 0.1
author = Guillaume Bono
author_email = guillaume.bono@insa-lyon.fr
description = Implementation of basic perlin noise using numpy and numba
long_description = file: README.md
long_description_content_type = text/markdown
keywords = perlin noise coherent jit
url = https://github.com/wgw101/perlin_noise
project_urls =
    Bug Tracker = https://github.com/wgw101/perlin_noise/issues
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    License :: OSI Approves :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3
install_requires =
    numpy
    numba

[options.packages.find]
where = src